--- a/app/src/main/res/layout/activity_period.xml
+++ b/app/src/main/res/layout/activity_period.xml
@@ -16,12 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/etStartTime"
+    <TextView
+        android:id="@+id/tvStartTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:ems="10"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
         app:layout_constraintStart_toEndOf="@+id/textView2" />
@@ -36,16 +35,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPeriod" />
 
-    <EditText
-        android:id="@+id/etEndTime"
+    <TextView
+        android:id="@+id/tvEndTime"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:ems="10"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/etStartTime" />
+        app:layout_constraintTop_toBottomOf="@+id/tvStartTime" />
 
     <TextView
         android:id="@+id/textView3"
@@ -53,16 +51,16 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="終了時間"
-        app:layout_constraintBaseline_toBaselineOf="@+id/etEndTime"
+        app:layout_constraintBaseline_toBaselineOf="@+id/tvEndTime"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/bSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="保存"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etEndTime" />
+        app:layout_constraintTop_toBottomOf="@+id/tvEndTime" />
 </androidx.constraintlayout.widget.ConstraintLayout>
