--- a/app/src/main/res/layout/activity_period.xml
+++ b/app/src/main/res/layout/activity_period.xml
@@ -66,4 +66,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etEndTime" />
 
+    <TextView
+        android:id="@+id/tvErrMsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="#ff7878"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bSave" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
