教科の登録まで完了

--- a/app/src/main/res/menu/activity_main_menu.xml
+++ b/app/src/main/res/menu/activity_main_menu.xml
@@ -7,5 +7,5 @@
         android:id="@+id/menuSubjectsList"
         android:icon="@android:drawable/ic_menu_edit"
         app:showAsAction="ifRoom"
-        android:title="教科登録" />
+        android:title="教科一覧" />
 </menu>
